--- a/Sillago.Tests/Sillago.Tests.csproj
+++ b/Sillago.Tests/Sillago.Tests.csproj
@@ -2,8 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
